Number Macros & 'to stream only' label

--- a/speech-bubble-template.html
+++ b/speech-bubble-template.html
@@ -25,6 +25,16 @@
             right: 12px;
             max-width: 600px;
         }
+        #stream_hide {
+            display: none;
+        }
+        #stream_show {
+            font-size: 18px;
+            line-height: 16px;
+            color:#929292;
+            position: relative;
+            bottom: 4px;
+        }
         img {
             width: 26px;
             height: 26px;
@@ -46,6 +56,7 @@
     <div id="wrapper">
         <div id="arrow"></div>
         <div id="speech-bubble">
+            <div id="stream_$">to stream only</div>
             $
         </div>
     </div>
